

2015-March-29 Struan Robertson

	* SensitivityAnalysis.cpp: Private class definitions added to help
	with the manipulation of orthogonal functions.

	* PseudoIsomerizationReaction.cpp: Altered to remove unnecessary warning.

2015-March-25 Struan Robertson

	* SensitivityAnalysis.cpp: Addition of Hermite functions.

	* MESMER manual.docx: Updates added on behalf of Chris.

2015-March-25 Chris Morley

    * SensitivityAnalysis.cpp: moved standardDeviation and R_squared in output
      XMLtree. Allow scientific formatting for concentration XML output.

    * examples\i-propyl - SA\pentyl_isomerization_SA.xml: cosmetic changes.
      (Still has a warning message.)

    * mesmer1.xsl: improved Sensitivity Analysis output.

2015-March-23 Struan Robertson

	* SensitivityAnalysis.cpp: Minor change to write out standard deviation
	of predicted quantity.

	* ...\examples\i-propyl - SA\pentyl_isomerization_SA.xml: New example
	added.

2015-March-18 Chris Morley

    * src/plugins/SensitivityAnalysis.cpp: 
    
      changed XML names to initial lc, e.g. me:sensitivityAnalysisSamples
      (but not R_Squared) and gave all the elements me: prefixes.
    
      made <me:sensitivityVarRedMethod> an optional input with a hard-wired
      default = RATIOCONTROL.
    
      moved output <me:R_Squared> to be child of <me:sensitivityAnalysisTable>

    * examples\i-propyl - SA\ipropyl_SA.xml, schemas\mesmerPlugins.xsd: update

    * defaults.xml: added defaults need checking

    * mesmer1.xsl: improved formatting for Sensitivity Analysis output.

2015-March-16 Chris Morley

    * src/gDensityOfStates.cpp,src/gDensityOfStates.h: correct algorithm for
    conversion between computational and thermodynamic. Correct units handling
    in ConvertEnergyConvention().

    * mesmer1.xsl: display for Sensitivity Analysis (unfinished)

2015-March-11 Chris Morley

    * src/gDensityOfStates.cpp: add missing NULL test.  
    