@@ -1,4 +1,7 @@
 
+2015-March-29 Struan Robertson
+
+	* SensitivityAnalysis.cpp: Refactoring of private classes.
 
 2015-March-29 Struan Robertson
 
